--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             
             <div class="reputation">
                 <ul>
-                    <li> ATTENTION TO DETAILS </li>
+                    <li> <h3> ATTENTION TO DETAILS </h3> </li>
                     <p> We go into all details and processes of your business to develop a customized solution</p>
-                    <li> PUNCTUALITY </li>
+                    <li> <h3> PUNCTUALITY </h3> </li>
                     <p> With us, you can feel safe and secure. An important principle of the company: respect your time and respect
                         the agreed
                         deadlines.</p>
-                    <li> PLANNING </li>
+                    <li> <h3> PLANNING </h3> </li>
                     <p> You will be able to observe and participate in every phase of solution development and implementation. </p>
-                    <li> MODERN TECHNOLOGIES </li>
+                    <li> <h3> MODERN TECHNOLOGIES </h3> </li>
                     <p> We use innovative tools to solve assigned tasks. It's time to simplify work processes. </p>
                 </ul>
             </div>
