--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head> 
         <meta charset="utf-8">
         <title>Homework 1</title>
+        <style type = "/style.css"></style>
     </head>
     <body>
         <header>
